TaskTagSupports now handles any exception #28